Fix alignment

--- a/app.css
+++ b/app.css
@@ -329,6 +329,7 @@
 
 .process {
   padding-bottom: 4rem;
+  width: 70%;
 }
 
 .process-image {
